--- a/web/secured/dt_control_muestras.xhtml
+++ b/web/secured/dt_control_muestras.xhtml
@@ -4,7 +4,6 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
     <h:head>
         <title>Matriz de control de proceso</title>
@@ -20,6 +19,7 @@
                     </f:facet>
                     <p:columnGroup type="header">
                         <p:row>
+                            <p:column rowspan="2" headerText="NoMuestra" style="width: 10%"/>
                             <p:column rowspan="2" headerText="Hora" style="width: 10%"/>
                             <p:column colspan="#{controlM.countAnalisis(3)}" headerText="Fis/Qui" rendered="#{controlM.existe(3)}" style="background: greenyellow;color: black;"/>
                             <p:column colspan="#{controlM.countAnalisis(1)}" headerText="Farino" rendered="#{controlM.existe(1)}" style="background: lightsalmon;color: black; "/>
@@ -52,15 +52,18 @@
                     <p:column>
                         <p:outputLabel value="#{count2}"/>
                     </p:column>
+                    <p:column>
+                        <p:outputLabel value="#{count2}"/>
+                    </p:column>
                     <p:columns value="#{controlM.rows}" var="year">
                         <h:outputText value="#{year}" />
                     </p:columns>
                     <p:columns value="#{controlM.rows}" var="year">
                         <h:outputText value="#{year}" />
                     </p:columns>
-
                     <p:columnGroup type="footer">
                         <p:row>
+                            <p:column rowspan="2" footerText="Parámetros" style="width: 10%"/>
                             <p:column footerText="Max" style="width: 10%"/> 
                             <c:forEach items="#{controlM.findAnalisisMax(3)}" var="analisis_max" rendered="#{controlM.existe(3)}">
                                 <p:column footerText="#{analisis_max}" style="width:15%"/>
@@ -105,7 +108,6 @@
                     </p:columnGroup>
                 </p:dataTable>
             </h:form>
-
         </p:scrollPanel>
     </h:body>
 </html>
