--- a/web/secured/dt_control_muestras.xhtml
+++ b/web/secured/dt_control_muestras.xhtml
@@ -4,15 +4,20 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:head>
         <title>Matriz de control de proceso</title>
     </h:head>
     <h:body>
+        <h:form id="headerProc">
+            <h:graphicImage url="/resources/images/final.jpg" style=" width: 100%;background-size: 100% 100%;"/>
+        </h:form>
         <p:scrollPanel style="width: max-content; height: 100%" mode="native">
             <h:form id="dtable_process">
-                <p:dataTable id="ctrl_muestras" value="#{controlM.rows2}" var="count2"
+                <p:dataTable id="ctrl_muestras" value="#{controlM.noMuestras}" var="noMuestras"
                              draggableColumns="true"
+                             style="text-align: center"
                              >
                     <f:facet name="header">
                         Muestras de procesos y empaque
@@ -50,17 +55,11 @@
                         </p:row>
                     </p:columnGroup>
                     <p:column>
-                        <p:outputLabel value="#{count2}"/>
+                        <p:outputLabel value="#{noMuestras}"/>
                     </p:column>
                     <p:column>
-                        <p:outputLabel value="#{count2}"/>
+                        <p:outputLabel value="#{noMuestras}"/>
                     </p:column>
-                    <p:columns value="#{controlM.rows}" var="year">
-                        <h:outputText value="#{year}" />
-                    </p:columns>
-                    <p:columns value="#{controlM.rows}" var="year">
-                        <h:outputText value="#{year}" />
-                    </p:columns>
                     <p:columnGroup type="footer">
                         <p:row>
                             <p:column rowspan="2" footerText="Parámetros" style="width: 10%"/>
