--- a/web/secured/listados/dt_list_molino.xhtml
+++ b/web/secured/listados/dt_list_molino.xhtml
@@ -118,7 +118,7 @@
                     </p:panelGrid>
                 </p:outputPanel>
                 <f:facet name="footer">
-                    <p:commandButton value="Guardar" icon="ui-icon-disk" action="#{molinosB.insertMolinos}" update=":formListMol:dtMol,formAdd,:formListMol:msg"/>
+                    <p:commandButton value="Guardar" icon="ui-icon-disk" action="#{molinosB.insertMolinos}" update=":formListMol:dtMol,formAddMC,:formListMol:msg"/>
                 </f:facet>
             </p:dialog>   
         </h:form>
